Added integration test, added freilos